# de-ds-ai-automation

./: .gitignore  5.5.8  README.md  pyproject.toml  requirements.txt
Local_Qdrant_RAG/: claude_desktop_config.example.json  for_genreate_embedding.py  main.py  readme.md
Local_Qdrant_RAG/data/: doc1.txt  doc2.txt  doc3.txt
Local_Qdrant_RAG/data/roles_point/: roles_points.txt
Local_Qdrant_RAG/mcp_server/: server.py
Local_Qdrant_RAG/tests/: conftest.py  test_format.py  test_main_smoke.py  test_qdrant_data_helper.py  test_text_transformatuons.py
Local_Qdrant_RAG/utils/: format.py  qdrant_data_helper.py  schemas.py  text_transformatuons.py
Q&A_knowledge_base/: README.md  pyproject.toml  test_main.py  test_main2.py
Q&A_knowledge_base/input/: setup_sim_local_using_bun_npm.txt
Q&A_knowledge_base/logs/: error_logs.txt
Q&A_knowledge_base/scripts/: diag.py  ingest.py  test_embed.py  wipe_qdrant.py
Q&A_knowledge_base/src/lr/: config.py  logging_setup.py
Q&A_knowledge_base/src/lr/api/: main.py  schemas.py
Q&A_knowledge_base/src/lr/io/: readers.py  splitter.py
Q&A_knowledge_base/src/lr/llm/: base.py  ollama_client.py  openrouter_client.py
Q&A_knowledge_base/src/lr/rag/: answer.py  embedder.py  retrieve.py
Q&A_knowledge_base/src/lr/vector/: qdrant_store.py
ai-creator-system/: README.md  pyproject.toml
ai-creator-system/app/: config.py  main.py
ai-creator-system/app/routers/: generate.py  orchestrate.py  publish.py  share.py
ai-creator-system/app/services/: audio.py  hashnode.py  nlp.py  socials.py  thumbnail.py  tts.py
ai-creator-system/app/utils/: io.py  logging.py
ai-learning-productivity/: docker-compose.yml
ai-learning-productivity/audio_storybot/: README (1).md  README.md  SUGGESTED_PATCH_app.py.diff  app.py  generate_script.py  requirements.txt
ai-learning-productivity/audio_storybot/output_script/: Explainer_for_apppy.md  Explainer_for_apppy.txt  Explainer_for_mainpy.md  Explainer_for_mainpy.txt
ai-learning-productivity/backend/: Dockerfile  pyproject.toml
ai-learning-productivity/backend/app/: embedder.py  llm.py  main.py  models.py  redact.py  utils.py  vector_store.py
ai-learning-productivity/video_editing_api/app/: ocr_privacy.py  trim_detect.py
ai-learning-productivity/video_editing_api/tests/: moviepy_poc.py  test_placeholder.py
ai-youtube-automation/: README.md
ai-youtube-automation/app/: main.py
ai-youtube-automation/app/routers/: generate.py  generate_local_video_script.py  generate_thumbnail.py  generate_voice.py  generate_yt_video_script.py  merge_all_step_to_video.py  publish.py  read_script.py  share.py  story_explain.py  voice_to_video_merge.py  yt_uploader.py
ai-youtube-automation/app/services/: add_bg_music_on_video.py  (+27 more)
ai-youtube-automation/output/: my_demo_video_transcript_20251204_124700.txt
ai-youtube-automation/test/: clean_artifacts.py  extract_video_scenes.py  merge_dub_test_fixed.py  voice_generation_api_test.py  voice_to_video_merge_debug.py
ai-youtube-automation/video_editing_api/: README.md  error_faced.txt  requirements.txt
ai_blog_writer/: .env.example  README.md  blog_generator.py  seo_optimizer.py  serp_search.py
aws/aws_glue/: glue_job_params.py
global_ai_api_demo/: chatgpt_api_demo.py  check_chatgpt_api_access.py  cohere_api_demo.py  deepseek_api_demo.py
image-video-generation-lab/: .gitignore  README.md  pyproject.toml  requirements.txt
image-video-generation-lab/src/: app.py
image-video-generation-lab/src/meme/: generate.py
image-video-generation-lab/src/shorts/: generate.py
image-video-generation-lab/src/subtitles/: build_srt.py  whisper_optional.py
image-video-generation-lab/src/t2i/: generate.py
image-video-generation-lab/src/tts/: cli.py  edge_backend.py  elevenlabs_backend.py  elevenlabs_tts.py  pyttsx3_backend.py  xtts_tts.py
image-video-generation-lab/src/utils/: audio.py  paths.py  text.py
image-video-generation-lab/src/video/: svd_img2vid.py  t2v_cogvideox.py  txt2svd.py
image-video-generation-lab/src/voice/: tts.py
kb-ai-agent/: .env.example  README.md  docker-compose.yml  requirements.txt  urls.jsonl
kb-ai-agent/nbs/: Untitled.ipynb
kb-ai-agent/src/: agent_graph.py  app.py
label-annotation/: IMDB_collect.py  IMDB_train_labeled_100.csv  README.md
label-annotation/ls-data/: label_studio.sqlite3
label-annotation/test/: urls_neg.txt
utils/: write_json.py
(+33 files in other folders)
