[tool.poetry]
name = "ai-learning-backend"
version = "0.1.0"
description = "FastAPI backend for AI learning productivity tool"
authors = ["Irshad <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114"
uvicorn = "^0.30"
pydantic = "^2.9"
qdrant-client = "^1.10"
numpy = "^1.26"
scikit-learn = "^1.5"
sentence-transformers = "^2.7"
httpx = "^0.27"
orjson = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.poetry.scripts]
start = "app.main:run"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
